# werf_ci_demo

./: .gitignore  README.md
apps/: README.md
apps/app1-java-react/: README.md  werf.yaml
apps/app2-python-angular/: README.md  werf.yaml
apps/app2-python-angular/backend/: Dockerfile  Dockerfile.dev  dev-start.sh  entrypoint.sh  pyproject.toml
apps/app2-python-angular/backend/src/app2/: main.py
apps/asset-svc/: README.md
apps/cmdb-web/: README.md
docs/: README.md  dev-in-cluster.md  gitlab-ci.md  glossary.md  k8s-requirements.md  resources.md  versioning.md  werf-intro.md
docs/concepts/: README.md  application-contract.md  delivery-to-k8s.md  security-and-tradeoffs.md  werf-install.md  werf-intro.md  werf-vs-alternatives.md
docs/delivery/: README.md  dev-caches-and-volumes.md  dev-in-cluster-vs-tools.md  dev-in-cluster.md  dev-prod.md  dev-workflow-cycle.md  kube-ci-operations.md  secrets.md  versioning.md
docs/demo/: README.md  qa-bank.md  slides.md  talk-deck.html  talk-flow.html  talk-plan-40min.md  talk-plan-60min.md
docs/diagrams/: architecture.mmd  converge-flow.mmd  deploy-topology.mmd  dev-workflow-cycle.mmd  dora-flow.mmd  industrial-cicd.mmd  product-anatomy.mmd
docs/integrations/: README.md  dora-metrics.md  gitlab-ci.md  jenkins.md
docs/kubernetes/: README.md  ingress.md  requirements.md  specifications.md
docs/products/: README.md  app1-java-react.md  app2-python-angular.md  overview.md  pgadmin.md  postgres-and-init.md
docs/runbooks/: README.md  cluster-connection.md  (+6 more)
kube_ci/: README.md
scripts/: werf_ci_demo-branch.sh
(+138 files in other folders)
